# soft_renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: geometry.h  model.h
src/: main.cpp  model.cpp
